:lipstick: Stop content overflow on mobile device

--- a/client/assets/styles/common.scss
+++ b/client/assets/styles/common.scss
@@ -54,5 +54,6 @@ ul {
 @media screen and (max-width: 650px) {
   .content {
     padding: 20px 10px;
+    min-height: calc(100vh - 120px);
   }
 }
